declare_args() {
  cxx = "clang++"
  ld = "clang++"
}

action("world") {
  gen_dir = "./gen"

  script = "generate_world.py"
  args = [
    gen_dir,
    "world.cc",
    "world.h",
  ]
  outputs = [
    "$root_build_dir/$gen_dir/world.cc",
    "$root_build_dir/$gen_dir/world.h",
  ]
}

executable("hello") {
  sources = [ "hello.cc" ] + get_target_outputs(":world")
  include_dirs = [ "$root_build_dir/gen" ]
  libs = [ "c++" ]
  deps = [ ":world" ]
}

toolchain("toolchain") {
  tool("cxx") {
    command = "$cxx -MMD -MF {{output}}.d {{include_dirs}} -o {{output}} -c {{source}}"
    depfile = "{{output}}.d"
    outputs = [ "{{target_out_dir}}/{{source_name_part}}.o" ]
  }

  tool("link") {
    command = "$ld {{inputs}} {{libs}} -o {{target_output_name}}"
    outputs = [ "{{target_output_name}}" ]
  }

  tool("stamp") {
    command = "touch {{output}}"
  }
}
